Fixed alignment of tutorial prompt text

--- a/src/Shared Components/First_time_prompt/First_time_prompt.module.css
+++ b/src/Shared Components/First_time_prompt/First_time_prompt.module.css
@@ -37,6 +37,9 @@
     position: fixed;
     height: 100%;
     z-index: 2;
+    position: fixed;
+    top: 0;
+    left: 0;
 }
 
 .stage_2_container{
